@@ -1,0 +1,4 @@
+Warning: Attempted to call a non-static method on a null reference at line 3
+Warning: assignment is corrupted, did you forget a semicolon? at line 3
+bar!
+Warning: assignment is corrupted, did you forget a semicolon? at line 4
